--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:statusBarColor">#5e37138d</item>
 
         <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:navigationBarColor">@color/colorSecond</item>
     </style>
 
 </resources>
